--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "A project to showcase workflows",
   "repository": {
     "type": "git",
-    "url": "?.git"
+    "url": "https://github.com/jeroentiggelman/workflows.git"
   },
   "author": "Jeroen Tiggelman",
   "devDependencies": {
     "gulp": "~3.8.2",
-    "gulp-util": "~2.2.17"
+    "gulp-util": "~2.2.17",
+    "gulp-coffee": "~2.0.1"
   }
 }
