--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "gulp": "~3.8.2",
     "gulp-util": "~2.2.17",
-    "gulp-coffee": "~2.0.1"
+    "gulp-coffee": "~2.0.1",
+    "gulp-concat": "~2.2.0"
   }
 }
