--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "gulp": "~3.8.2",
     "gulp-util": "~2.2.17",
     "gulp-coffee": "~2.0.1",
-    "gulp-concat": "~2.2.0"
+    "gulp-concat": "~2.2.0",
+    "gulp-browserify": "~0.5.0",
+    "jquery": "~2.1.1",
+    "mustache": "~0.8.2"
   }
 }
