--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "jquery": "~2.1.1",
     "mustache": "~0.8.2",
     "gulp-compass": "~1.1.9",
-    "gulp-connect": "~2.0.5"
+    "gulp-connect": "~2.0.5",
+    "gulp-if": "~1.2.1",
+    "gulp-uglify": "~0.3.1"
   }
 }
