--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-connect": "~2.0.5",
     "gulp-if": "~1.2.1",
     "gulp-uglify": "~0.3.1",
-    "gulp-minify-html": "~0.1.4"
+    "gulp-minify-html": "~0.1.4",
+    "gulp-jsonminify": "0.0.1"
   }
 }
