--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "gulp-if": "~1.2.1",
     "gulp-uglify": "~0.3.1",
     "gulp-minify-html": "~0.1.4",
-    "gulp-jsonminify": "0.0.1"
+    "gulp-jsonminify": "0.0.1",
+    "gulp-imagemin": "~0.6.1",
+    "imagemin-pngcrush": "~0.1.0"
   }
 }
